[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Levels/GameMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/musics/Clement Panchout - Sweet 70s.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/fonts/dynamic_font_UI.tres" type="DynamicFont" id=3]

[sub_resource type="Theme" id=1]

[node name="GameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "Title Screen for the Game"
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0627451, 0.0941176, 0.172549, 0.780392 )

[node name="ContainerMenu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -116.0
margin_top = -195.0
margin_right = 117.0
alignment = 1

[node name="StartGameButton" type="Button" parent="ContainerMenu"]
margin_top = 38.0
margin_right = 233.0
margin_bottom = 75.0
focus_neighbour_top = NodePath("../QuitButton")
theme = SubResource( 1 )
custom_constants/hseparation = 0
custom_fonts/font = ExtResource( 3 )
text = "Start Game"

[node name="SettingsButton" type="Button" parent="ContainerMenu"]
margin_top = 79.0
margin_right = 233.0
margin_bottom = 116.0
theme = SubResource( 1 )
custom_constants/hseparation = 0
custom_fonts/font = ExtResource( 3 )
text = "Settings"

[node name="QuitButton" type="Button" parent="ContainerMenu"]
margin_top = 120.0
margin_right = 233.0
margin_bottom = 157.0
focus_neighbour_bottom = NodePath("../StartGameButton")
theme = SubResource( 1 )
custom_constants/hseparation = 0
custom_fonts/font = ExtResource( 3 )
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="ContainerMenu/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="ContainerMenu/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="ContainerMenu/QuitButton" to="." method="_on_QuitButton_pressed"]
